--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -3,7 +3,7 @@ name: Trivy Hybrid Scan
 on:
   push:
     branches:
-      - mains
+      - main
 
 jobs:
   trivy-hybrid-scan:
@@ -40,8 +40,5 @@ jobs:
         uses: cloudbees-io/trivy-github-test@main
         with:
           binary-tar-path: output.tar
-          cloudbees_pat_token: ${{ secrets.CLOUDBEES_PREPROD_PAT }}
-          cloudbees_api_url: ${{ vars.CLOUDBEES_PREPROD_API_URL }}
-          run_id: "14377182881"
-          job_id: $JOB_ID
-          step_id: $STEP_ID 
+          cloudbees_pat_token: ${{ secrets.CLOUDBEES_QA_PAT }}
+          cloudbees_api_url: ${{ vars.CLOUDBEES_QA_API_URL }}
