--- a/.github/workflows/coverity.yaml
+++ b/.github/workflows/coverity.yaml
@@ -24,8 +24,8 @@ jobs:
       - name: Coverity scan
         uses: cloudbees-io/coverity-github-test@main
         with:
-          cloudbees_pat_token: ${{ secrets.CLOUDBEES_PREPROD_PAT }}
-          cloudbees_api_url: ${{ vars.CLOUDBEES_PREPROD_API_URL }}
+          cloudbees_pat_token: ${{ secrets.CLOUDBEES_QA_PAT }}
+          cloudbees_api_url: ${{ vars.CLOUDBEES_QA_API_URL }}
           step_id: "coverity-scan"
           server-url: ${{ vars.COVERITY_SERVER_URL }}
           api-token: ${{ secrets.COVERITY_API_TOKEN_V }}
