--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -35,3 +35,4 @@ jobs:
           binary-tar-path: output.tar
           cloudbees_pat_token: ${{ secrets.CLOUDBEES_QA_PAT }}
           cloudbees_api_url: ${{ vars.CLOUDBEES_QA_API_URL }}
+          license: true
