--- a/.github/workflows/gitleaks.yaml
+++ b/.github/workflows/gitleaks.yaml
@@ -22,7 +22,7 @@ jobs:
           echo "Step id is ${{ steps.internal.id }}"
 
       - name: Gitleaks scan
-        uses: cloudbees-io/gitleaks-github-test@main
+        uses: cloudbees-io/gitleaks-github-test@demo
         with:
           cloudbees-pat: ${{ secrets.CLOUDBEES_QA_PAT }}
           cloudbees-url: ${{ vars.CLOUDBEES_QA_API_URL }}
